# Modular-CI-Pipeline

./: CMakeLists.txt  README.md
.github/workflows/: pipeline.yml
scripts/: run_tests.py  test_bindings.py
src/: bindings.cpp  hardware_controller.cpp  hardware_controller.hpp  main.cpp
